0.3.4:
- Removed mirrorlist missing % warning
- Patched transform problem (Peter Poeml)
- GPLv3 for metalink tool
- Untested windows path translation patch
- Moved char* to string, cleanup.
- bootstrap.sh can now do without ccbuild

0.3.3:
- Autotools support (./configure;make;make install)
- Large file supported enabled

0.3.2:
- Added pieces support for sha1 of 131072 bytes (hash named sha1pieces)
- Pieces are kept below 255 to keep metalink size down, starting at 256*1024 bytes.
- Added hashlist option, to generate openssl style hashlists on stdout.

0.3.1:
- Bugfix: Unable to open warning message fixed
- Help message typo (-md5 -> --md5)
- Root XML node attributes split over multiple lines
- Bugfix --addpath was broken (due to typo in option scanner)
- Add location if none is given and the host has a landcode
- Added boost_regex library dependency
- Added "MD5()=" type md5list support
- Added --desc option, to add a metalink description
- Bugfix: XML escape sequences for "<>"

0.3.0:
- Added headerfile option, to allow a file to be included just after <metlink>
- Removed gnunet from somedigests (slowing down and not used often)
- Added support for type, preference, location to mirror list
- Fixed filesize bug
- Added --addpath option
- Updated examples in help
- Updated help message and it's layout

0.2.1:
- Added nomirrors, somedigests, mindigests, alldigests options.
- Added XML escaping of the needed strings
- Added generator to the generated xml
- Cleaned up source

0.2.0:
- Moved to the new Metalinker.org system and file specs
- Full rewrite of program structure.

0.1.2:
- Added options: source, publisher, description, rights, format. 
- Speedup in GNUnet algorithm.

0.1.1:
- New XSL sheet loaded
- Critical bugfix: ed2k hash for files larger then 9mb was garbage.

0.1.0:
- Dropped Crypto++ library as a dependency
- Cleaned up most code
- Added noxsl option
- Added --genxsl option to generate local XSL sheets
  (Online XSLT sheets for local files