@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 
 dnl Boilerplate
-AC_INIT(metalink, 0.3.2)
+AC_INIT(metalink, 0.3.4)
 AC_CONFIG_SRCDIR(src/metalink.cc)
 AM_INIT_AUTOMAKE
 
