@@ -23,7 +23,7 @@
 
 std::string const Globals::programName("metalink");
 std::string const Globals::programDescription("Metalink XML generator");
-unsigned const Globals::version[] = {0,3,3};
+unsigned const Globals::version[] = {0,3,4};
 
 std::string Globals::metalinkExtension(".metalinks");
 char const Globals::dirSep('/');
